--- a/.github/workflows/Build_OP_JDC_AX1800Pro.yml
+++ b/.github/workflows/Build_OP_JDC_AX1800Pro.yml
@@ -53,10 +53,10 @@ jobs:
         REPO_URL: https://github.com/VIKINGYFY/immortalwrt.git
         REPO_BRANCH: master
       run: |
-        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH immortalwrt
         cd immortalwrt
     - name: Update & Install feeds
-      working-directory: ./openwrt
+      working-directory: ./immortalwrt
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
