--- a/.github/workflows/Build_OP_JDC_AX1800Pro.yml
+++ b/.github/workflows/Build_OP_JDC_AX1800Pro.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
 
     - name: Initialization environment
       env:
@@ -51,7 +51,7 @@ jobs:
     - name: Clone source code
       env: 
         REPO_URL: https://github.com/VIKINGYFY/immortalwrt.git
-        REPO_BRANCH: master
+        REPO_BRANCH: main
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH immortalwrt
         cd immortalwrt
@@ -87,7 +87,7 @@ jobs:
         echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
     - name : Upload artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@main
       with:
         name: OpenWrt
         path: immortalwrt/bin
